# 2048_riscv

./: 2048.c  CMakeLists.txt  README.md  Readme.md  devicelib.c  devicelib.h  input.c  input.h  random.c  random.h
src/: 2048.c  block.h  color.h  devicelib.c  draw.c  draw.h  graphics.c  graphics.h  input.c  input.h
